--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   animated_text_kit: ^4.2.2
   carousel_slider: ^5.0.0
+  iconify_flutter: ^0.0.7
+  awesome_card: ^1.1.7
+  extended_masked_text: ^3.0.1
+  pinput: ^5.0.0
+  image_picker: ^1.1.2
+  internet_connection_checker: ^1.0.0+1
+  http: ^1.3.0
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +79,14 @@ flutter:
     - assets/splash_screen/
     - assets/banners/
     - assets/recommended/
+    - assets/users/
+    - assets/latest/
+    - assets/paymentMethod/
+    - assets/creditcard/
+    - assets/profile/
+    - assets/transections/
+    - assets/success/
+    - assets/auth/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
